--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: var(--bg);
   color: white;
-  /*min-height: 2000px;*/
+  min-height: 2000px;
 }
 
 /* ini css navbar*/
@@ -103,9 +103,8 @@ body {
   background: linear-gradient(
     0deg,
     rgba(1, 1, 3, 1) 9%,
-    rgba(255, 255, 255, 0)50%
+    rgba(255, 255, 255, 0) 50%
   );
-
 }
 
 .hero .content {
@@ -142,6 +141,49 @@ body {
   background-color: var(--primary);
   border-radius: 0.5rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+/*about section*/
+.about {
+  padding: 8rem 7% 1.4rem;
+}
+.about h2 {
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 3rem;
+}
+
+.about h2 span {
+  color: var(--primary);
+}
+
+.about .row {
+  display: flex;
+}
+
+.about .row .about-img {
+  flex: 1 1 45rem;
+}
+
+.about .row .about-img img {
+  width: 100%;
+}
+
+.about .row .content {
+  flex: 1 1 35rem;
+  padding: 0 1rem;
+}
+
+.about .row .content h3 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.about .row .content p {
+  margin-bottom: 0.8rem;
+  font-size: 1.2rem;
+  font-weight: 100;
+  line-height: 1;
 }
 
 /*media queries*/
@@ -187,10 +229,34 @@ body {
   .navbar .navbar-nav a:hover::after {
     transform: scaleX (0.1);
   }
+
+  .about .row {
+    flex-wrap: wrap;
+  }
+
+  .about .row .about-img img {
+    height: 24rem;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+
+  .about .row .content p {
+    font-size: 1.5rem;
+  }
 }
 /*hp*/
 @media (max-width: 450px) {
   html {
     font-size: 50%;
+    color: var();
   }
 }
