--- a/style.css
+++ b/style.css
@@ -144,10 +144,12 @@ body {
 }
 
 /*about section*/
-.about {
+.about
+.menu {
   padding: 8rem 7% 1.4rem;
 }
-.about h2 {
+.about h2
+.menu h2{
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
