--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: var(--bg);
   color: white;
-  min-height: 2000px;
+  min-height: 4000px;
 }
 
 /* ini css navbar*/
@@ -77,11 +77,11 @@ body {
   color: #b6895b;
 }
 
-#hamburger-menu {
+#hamburger-menutr {
   display: none;
 }
 
-/*hero section*/
+/*hero section*
 .hero {
   min-height: 100vh;
   display: flex;
@@ -143,19 +143,20 @@ body {
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
 
-/*about section*/
-.about
+/*about section*
+.about,
 .menu {
   padding: 8rem 7% 1.4rem;
 }
-.about h2
-.menu h2{
+.about h2,
+.menu h2 {
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
 }
 
-.about h2 span {
+.about h2 span,
+.menu h2 span {
   color: var(--primary);
 }
 
@@ -188,15 +189,49 @@ body {
   line-height: 1;
 }
 
+/* menu*
+.menu h2 {
+  margin-bottom: 1rem;
+}
+.menu p {
+  text-align: center;
+  max-width: 30rem;
+  margin: auto;
+  font-size: 1rem;
+  font-weight: 100;
+  line-height: 1.6;
+}
+
+.menu .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5rem;
+  justify-content: center;
+}
+
+.menu .row .menu-card {
+  text-align: center;
+  padding-bottom: 4rem;
+}
+
+.menu .row .menu-card img {
+  border-radius: 60%;
+  width: 60%;
+}
+
+.menu .row .menu-card .menu-card-title {
+  margin-top: 1rem auto 0.5rem;
+}
+
 /*media queries*/
 
-/*laptop*/
+/*laptop*
 @media (max-width: 1366px) {
   html {
     font-size: 75%;
   }
 }
-/*tablet*/
+/*tablet*
 @media (max-width: 758px) {
   html {
     font-size: 62.5%;
@@ -255,7 +290,7 @@ body {
     font-size: 1.5rem;
   }
 }
-/*hp*/
+/*hp*
 @media (max-width: 450px) {
   html {
     font-size: 50%;
