--- a/style.css
+++ b/style.css
@@ -77,11 +77,11 @@ body {
   color: #b6895b;
 }
 
-#hamburger-menutr {
+#hamburger-menu {
   display: none;
 }
 
-/*hero section*
+/*hero section*/
 .hero {
   min-height: 100vh;
   display: flex;
@@ -143,7 +143,7 @@ body {
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
 
-/*about section*
+/*about section*/
 .about,
 .menu {
   padding: 8rem 7% 1.4rem;
@@ -189,7 +189,7 @@ body {
   line-height: 1;
 }
 
-/* menu*
+/* menu*/
 .menu h2 {
   margin-bottom: 1rem;
 }
@@ -225,13 +225,13 @@ body {
 
 /*media queries*/
 
-/*laptop*
+/*laptop*/
 @media (max-width: 1366px) {
   html {
     font-size: 75%;
   }
 }
-/*tablet*
+/*tablet*/
 @media (max-width: 758px) {
   html {
     font-size: 62.5%;
@@ -290,7 +290,7 @@ body {
     font-size: 1.5rem;
   }
 }
-/*hp*
+/*hp*/
 @media (max-width: 450px) {
   html {
     font-size: 50%;
