--- a/style.css
+++ b/style.css
@@ -12,12 +12,15 @@
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: var(--bg);
   color: white;
-  min-height: 6000px;
 }
 
 /* ini css navbar*/
@@ -86,7 +89,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("foto\ kopi.jpg");
+  background-image: url("img/foto\ kopi.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -275,6 +278,49 @@ body {
   cursor: pointer;
 }
 
+/*footer*/
+footer {
+  background-color: var(--primary);
+  text-align: center;
+  padding: 1rem 0;
+  margin-top: 3rem;
+}
+
+footer .social {
+  padding: 1.5rem 0.5rem;
+  text-align: center;
+}
+
+footer .social a {
+  color: white;
+  margin: 0 0.5rem;
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
+  text-decoration: none;
+}
+
+footer .social a:hover,
+footer .links a:hover {
+  color: var(--bg);
+}
+
+footer .links {
+  margin-bottom: 1.4rem;
+}
+
+footer .links a {
+  color: white;
+  padding: 0.7rem 1rem;
+}
+
+footer .credit {
+  font-size: 0.8rem;
+}
+
+footer .credit a {
+  color: var(--bg);
+  font-weight: 700;
+}
 /*media queries*/
 
 /*laptop*/
